[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/FullscreenMonitor.gd" type="Script" id=1]
[ext_resource path="res://assets/ui/monitor/monitor_lower.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/monitor/monitor_fullscreen.png" type="Texture" id=3]


[node name="FullscreenMonitor" type="Control"]
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FullscreenMonitor" type="TextureButton" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 952.0
margin_right = 1920.0
margin_bottom = 1080.0
mouse_default_cursor_shape = 2
action_mode = 0
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LowerMonitor" type="TextureButton" parent="."]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 952.0
margin_right = 1920.0
margin_bottom = 1080.0
action_mode = 0
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 5
[connection signal="pressed" from="FullscreenMonitor" to="." method="_on_FullscreenMonitor_pressed"]
[connection signal="mouse_entered" from="LowerMonitor" to="." method="_on_LowerMonitor_pressed"]
[connection signal="pressed" from="LowerMonitor" to="." method="_on_LowerMonitor_pressed"]
